--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
 <script src="controllers/user.controller.client.js"></script>
 <script src="controllers/home.controller.client.js"></script>
 <script src="controllers/comments.controller.client.js"></script>
+<script src="controllers/friends.controller.client.js"></script>
 <!--<script src="controllers/item.controller.client.js"></script>-->
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
