--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
 <script src="config.js"></script>
 <!--<script src="directives/embed-responsive-full.directive.client.js"></script>-->
 <script src="services/user.service.client.js"></script>
+<script src="services/item.service.client.js"></script>
 <script src="services/hacker-news.service.client.js"></script>
 <script src="controllers/user.controller.client.js"></script>
 <script src="controllers/home.controller.client.js"></script>
