--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,6 @@
 
 <!-- jQuery 3.0 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!-- jQuery UI -->
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -52,20 +50,24 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 <!-- Angular Route -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
-<!-- Angular Sanitize -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-sanitize.js"></script>
 
 <script src="app.js"></script>
 <script src="config.js"></script>
-<!--<script src="directives/embed-responsive-full.directive.client.js"></script>-->
+
+<!-- Directives -->
+<script src="directives/shareModal.directive.client.js"></script>
+
+<!-- Services -->
 <script src="services/user.service.client.js"></script>
 <script src="services/item.service.client.js"></script>
 <script src="services/hacker-news.service.client.js"></script>
-<script src="controllers/user.controller.client.js"></script>
+
+<!-- Controllers -->
+<script src="controllers/account.controller.client.js"></script>
 <script src="controllers/home.controller.client.js"></script>
 <script src="controllers/comments.controller.client.js"></script>
 <script src="controllers/friends.controller.client.js"></script>
-<!--<script src="controllers/item.controller.client.js"></script>-->
+<script src="controllers/user.controller.client.js"></script>
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
