--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 <script src="config.js"></script>
 
 <!-- Directives -->
-<script src="directives/shareModal.directive.client.js"></script>
+<script src="directives/share-modal.directive.client.js"></script>
 
 <!-- Services -->
 <script src="services/user.service.client.js"></script>
@@ -68,6 +68,7 @@
 <script src="controllers/comments.controller.client.js"></script>
 <script src="controllers/friends.controller.client.js"></script>
 <script src="controllers/user.controller.client.js"></script>
+<script src="controllers/admin.controller.client.js"></script>
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
